--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v3 #setup nodejs in our runner
+      - run: npm install pm2@latest -g #install pm2 global
+
       - name: Deploy Using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -23,6 +26,5 @@ jobs:
             cd auto-deploy-flask
             git pull origin main
             git status
-            npm install -g pm2
             pm2 reload AutoDeployFlask
             pm2 restart AutoDeployFlask
