--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,8 +23,24 @@ jobs:
             cd auto-deploy-flask
             git pull origin main
             git status
-            sudo ln -s "$NVM_DIR/versions/node/v20.15.1/bin/node" "/usr/local/bin/node"
-            sudo ln -s "$NVM_DIR/versions/node/v20.15.1/bin/npm" "/usr/local/bin/npm"
-            sudo ln -s "$NVM_DIR/versions/node/v20.15.1/bin/pm2" "/usr/local/bin/pm2"
+
+            # Ensure NVM is loaded
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+
+            # Use the correct Node.js version
+            nvm use 20.15.1
+
+            # Create symlinks if they don't exist
+            sudo ln -sf "$(which node)" "/usr/local/bin/node"
+            sudo ln -sf "$(which npm)" "/usr/local/bin/npm"
+
+            # Install PM2 globally if not already installed
+            npm list -g | grep pm2 || npm install -g pm2
+
+            # Create PM2 symlink
+            sudo ln -sf "$(which pm2)" "/usr/local/bin/pm2"
+
+            # Reload and restart your application
             pm2 reload AutoDeployFlask
             pm2 restart AutoDeployFlask
