--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,23 +24,12 @@ jobs:
             git pull origin main
             git status
 
-            # Ensure NVM is loaded
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            source .auto/bin/activate
 
-            # Use the correct Node.js version
-            nvm use 20.15.1
+            pip install -r requirements.txt
 
-            # Create symlinks if they don't exist
-            sudo ln -sf "$(which node)" "/usr/local/bin/node"
-            sudo ln -sf "$(which npm)" "/usr/local/bin/npm"
+            ps aux | grep gunicorn
 
-            # Install PM2 globally if not already installed
-            npm list -g | grep pm2 || npm install -g pm2
+            pkill -f '/usr/bin/gunicorn'
 
-            # Create PM2 symlink
-            sudo ln -sf "$(which pm2)" "/usr/local/bin/pm2"
-
-            # Reload and restart your application
-            pm2 reload AutoDeployFlask
-            pm2 restart AutoDeployFlask
+            gunicorn -w 3 -b 0.0.0.0:7001 app:app --daemon
